--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-REACT_APP_SERVER_BASE_URL = "http://localhost:4000"
+REACT_APP_SERVER_BASE_URL = https://doughtflow.onrender.com
 
-REACT_APP_APP_URL = "http://localhost:3000"
+REACT_APP_APP_URL = https://doughtflow.onrender.com
 
-REACT_APP_GOOGLE_OAUTH_CLIENT_ID = 413200676445-jo3t0rnhn74mvnm3vsljfl93uvlq7pn0.apps.googleusercontent.com
+REACT_APP_GOOGLE_OAUTH_CLIENT_ID = 413200676445-krl0js9henkvjqdf728ei36lgbfoed2n.apps.googleusercontent.com
